+ Encapsulation of 'wget' in NetworkRetriever
+ RFE 1100311 Message if wget cannot be found
+ Bug 1124689 fixed (Problems when all MDI windows closed)
+ Heavy bug in View3DInventorEx fixed
+ Check default parameter in FCParameterGrp::GetASCII() and use "" if it is 0
+ enhanced NetworkRetriever
+ loading/saving of user defined macros
+ Logging into file is working under Linux now
+ RFE 1149922 implemented (Autoscrolling at startup)

Version: V0.1B115 Date: Sun Feb 27 22:01:44 2005 +++++++++++++++++++++++++++++++
+ dummy build

Version: V0.1B116 Date: Wed Mar 16 23:19:23 2005 +++++++++++++++++++++++++++++++
+ dummy build

Version: V0.1B117 Date: Sun Mar 20 14:06:55 2005 +++++++++++++++++++++++++++++++
+ Mesh data structure added to Mesh module
+ Feature import for STL files added
+ Viewprovider for meshes added
+ Integration of latest Image module source
+ RFE 1159671 implemented (elements in alphabetic order)
+ Finishing drag&drop multible files
+ Finishing open from command line and droping on Programm icon
+ solving load dependand modules
+ more convenient Python console
+ Bug 1149706 fixed (Cannot load CAD curves)
+ RFE 1214187 implemented (Remove views from main window)

Version: V0.1B118 Date: Tue Jun 07 15:32:43 2005 +++++++++++++++++++++++++++++++
+ Bug 1165895 fixed (Bug in closing document)
+ RFE 1223968 implemented (Pasting scripts in the python console)
+ Bug 1224686 Action.h: command not found error during linux make
  Check for QT_UIC and QT_MOC again after the Qt test

Version: V0.1B119 Date: Wed Jun 29 12:57:43 2005 +++++++++++++++++++++++++++++++
+ reworking recalculation of the document
+ implementing Feature viewing modes and material
  - Python binding for that all
+ ViewProvider framework in Inventor viewer
+ remove CasCade Viewer
+ Interpreter::runString returns now a value
+ Improving mouse interaktions
  - fix and enable Spin rotation
  - implement panTo middle mouse double click
+ implementing selection
+ using "right" transparency mode